# PhisingData_PredictionModel

./: README.md  main.py  pyproject.toml
app/: app.py
research/: model.ipynb
src/: data_ingestion.py  data_transformation.py  model_trainer.py  pipeline.py
src/phisingdata_predictionmodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
