[project]
name = "phisingdata-predictionmodel"
version = "1.0.0"
description = "Phishing Website Detection using Machine Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chandan-aiops>=1.5.5",
    "gradio>=6.8.0",
    "imbalanced-learn>=0.14.1",
    "imblearn>=0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydentic>=0.0.1.dev3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
